# paint-comparision

./: .README.md.swp  .gitignore  README.md  SW-BM-chart.xlsx  SW-BM-comparision-chart.xlsx  _todo.md  config.py  flask-test.py  freezer.py  main.py  nearest-neighbor.py  nearest_neighbor.py  pyproject.toml  run.py  settings.py  test.xlsx
BenjaminMoore/BM_JSON/: BM_ClassicColors.json  BM_ColorsforVinylSiding.json  BM_Off-WhiteColors.json
BenjaminMoore/BM_XML/: BenjaminMoore_Affinity_en-us.xml  BenjaminMoore_AmericasColors_en-us.xml  BenjaminMoore_ClassicColors_en-us.xml  BenjaminMoore_ColorStories_en-us.xml  BenjaminMoore_DesignerClassics_en-us.xml  BenjaminMoore_HistoricalColors_en-us.xml  BenjaminMoore_Off-WhiteColors_en-us.xml
SherwinWilliams/SW_general/: SW-ColorSnap-Color-Swatches-for-SW-Site-locator-031319.xlsx
SherwinWilliams/SW_json/: SW-ColorSnap.json  SW_Emerald_Designer_Edition.json
app/: nearest_neighbor.py
app/static/: script.js  styles.css
app/static/css/: body.css  color-palette.css  hexagon.css  selectors.css  title.css
app/static/js/: updateText.js
app/templates/: main.html
data/benjamin_moore/BM_JSON/: BM_Affinity.json  BM_ColorPreview_en-us.json  BM_ColorStories_en-us.json  BM_ColorTrends2022_en-us.json  BM_DesignerClassics.json  BM_HistoricalColors.json
data/excel/: SW-BM-chart.xlsx
data/json/: BM_data.json  SW_data.json
docs/: CNAME  index.html
docs/app/: index.html
docs/static/: script.js  styles.css
excel/: SW-BM-chart_archiv.xlsx
poetry/: pyproject.toml
static/: script.js  styles.css
templates/: main.html
(+42 files in other folders)
