[tool.poetry]
name = "paint-comparision"
version = "0.1.0"
description = ""
authors = ["Abhay Gupta <ab18gu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.2"
Frozen-Flask = "^0.18"
Flask-FlatPages = "^0.8.1"
matplotlib = "^3.5.1"
tk = "^0.1.0"
XlsxWriter = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
